Bug 506932 - "This is an application bug!" log lines do not contain the application name
Summary: "This is an application bug!" log lines do not contain the application name
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Notifications (other bugs)
Version First Reported In: 6.4.0
Platform: Arch Linux Linux
: NOR minor
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-07-11 23:30 UTC by Alexander Patrakov
Modified: 2025-08-08 00:25 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.5.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Patrakov 2025-07-11 23:30:37 UTC
SUMMARY


STEPS TO REPRODUCE
1. Examine the system log
2. Find these log lines:

```
Jul 11 19:59:29 aep-haswell plasmashell[1525]: org.kde.plasma.notificationmanager: Trying to replace notification with id 1467 which doesn't exist, creating a new one. This is an application bug!
Jul 11 19:59:30 aep-haswell plasmashell[1525]: org.kde.plasma.notificationmanager: Notification to send to backend contains invalid XML:  "Opening and ending tag mismatch." line 1 col 498
```

3. There is no Step 3. Step 3 would be reporting an application bug, but I can't do so.

OBSERVED RESULT

The log message does not contain the name of an application whose developers I should report the bug to. So I don't report it, and it does not get fixed.

EXPECTED RESULT

An actionable log line would include the application name, at the very minimum.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Arch Linux
KDE Plasma Version: 6.4.0
KDE Frameworks Version: 6.15.0
Qt Version: 6.9.1

ADDITIONAL INFORMATION

I still don't know which application tried to replace a notification in an invalid way or created invalid XML.
Comment 1 Nate Graham 2025-08-06 22:49:51 UTC
Right, good call. Totally reasonable.
Comment 2 Bug Janitor Service 2025-08-06 22:51:18 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/5739
Comment 3 Nate Graham 2025-08-08 00:25:46 UTC
Git commit 27f30e8062d19698f2c564052a5c0dfa4bfb726c by Nate Graham.
Committed on 07/08/2025 at 20:46.
Pushed by ngraham into branch 'master'.

libnotificationmanager: mention the name of the app when blaming them

In a few places, libnotificationmanager reports in the log that a
notification was malformed because the app that sent it is buggy. But
it sometimes doesn't tell you which app is to blame! This commit fixes
that.
FIXED-IN: 6.5.0

M  +1    -1    libnotificationmanager/abstractnotificationsmodel.cpp
M  +1    -1    libnotificationmanager/job_p.cpp
M  +3    -1    libnotificationmanager/jobsmodel_p.cpp
M  +1    -1    libnotificationmanager/server_p.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/27f30e8062d19698f2c564052a5c0dfa4bfb726c