libnotificationmanager: mention the name of the app when blaming them

In a few places, libnotificationmanager reports in the log that a
notification was malformed because the app that sent it is buggy. But
it sometimes doesn't tell you which app is to blame! This commit fixes
that.

BUG: 506932
FIXED-IN: 6.5.0